# PlayFizziks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
dependencies/Fizziks/: CMakeLists.txt
dependencies/Fizziks/include/Fizziks/: FizzWorld.h  Fizziks.h  MathUtils.h  Ray.h  RigidBody.h  RigidDef.h  Shape.h  Vec.h
dependencies/Fizziks/lib/Debug/: Fizziks.exp  Fizziks.lib
dependencies/Fizziks/lib/MinSizeRel/: Fizziks.exp
dependencies/Fizziks/lib/RelWithDebInfo/: Fizziks.exp
dependencies/Fizziks/lib/Release/: Fizziks.exp  Fizziks.lib
src/: fizziks.cpp
